--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "files.associations": {
         "seq_helpers.h": "c"
     },
-    "workbench.colorTheme": "Andromeda"
+    "workbench.colorTheme": "Community Material Theme Ocean"
 }
